<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">SecondChance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_to_list">Back to List</string>
    <string name="go_to_add">Go to Add</string>
    <string name="go_to_detail">Go to Detail</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="second_Chance" translatable="false">Second Chance</string>
    <string name="add_edit_product">Add / Edit Product</string>
    <string name="shekel" translatable="false">₪</string>
    <string name="product_details">Product Details</string>
    <string name="save_product">save product</string>
    <string name="select_image">select image</string>
    <string name="back">back</string>
    <string name="product_name">product name</string>
    <string name="product_description">product description</string>
    <string name="contact_seller">contact seller</string>
    <string name="product_image">product image</string>
    <string name="please_enter_a_product_name">Please enter a product name</string>
    <string name="please_enter_a_valid_price">Please enter a valid price</string>
    <string name="please_select_a_seller">Please select a seller</string>
    <string name="product_saved_successfully">Product saved successfully</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="select_image_source">Select Image Source</string>
    <string name="product">product</string>
    <string name="are_you_sure_you_want_to_delete_this_product">Are you sure you want to delete this product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="price">price</string>
    <string name="name">name: %1$s</string>
    <string name="mobile_phone">Mobile phone: %1$s</string>
    <string name="address">Address: %1$s</string>
    <string name="tel_aviv">tel aviv</string>
    <string name="call_to_seller">call to seller</string>
    <string name="seller_name">seller name</string>
    <string name="seller_details">seller details</string>
    <string name="mobile_phone_seller">Mobile Phone: %1$s</string>
    <string name="address_seller">Address: %1$s</string>
    <string name="app_logo">app_logo</string>
    <string name="seller_number">Mobile Phone: %1$s</string>
    <string name="no_seller_details_found">No seller details found.</string>
    <string name="no_description">No description</string>
    <string name="seller_addres">seller addres</string>
    <string name="mobile_phone_seller1">Mobile phone</string>
    <string name="name_seller1">Name</string>
    <string name="name_seller">name</string>
    <string name="b_name">Name: %1$s</string>
    <string name="b_phone">Phone: %1$s</string>
    <string name="b_address">Address: %1$s</string>
    <string name="phone">Phone</string>
</resources>