<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvSellerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seller_name" />

    <TextView
        android:id="@+id/tvSellerPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone" />

    <TextView
        android:id="@+id/tvSellerAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address" />
</LinearLayout>